Bugfixes
Bugs found by Angel

- Navbar submenu alignment
- Latest title linkage
- Crane and Northern logo linkage
- Google logo linkage
- Phone numbers not having tel:
- Latest images expanding on small screens when they shouldn't
- Services buttons too wide on IE

--- a/css/styles.css
+++ b/css/styles.css
@@ -475,8 +475,8 @@ button:focus {
   display: none;
   position: absolute;
   top: 100%;
-  left: -20px;
-  right: -20px;
+  left: -15px;
+  right: -15px;
   z-index: 10;
   list-style: none;
 }
@@ -628,8 +628,7 @@ button:focus {
 .service-cards button {
   text-transform: uppercase;
   margin-top: auto;
-  margin-left: auto;
-  margin-right: auto;
+  align-self: center;
 }
 
 /*-------------------- styles card content ---------------------*/
@@ -833,11 +832,6 @@ button:focus {
   overflow: hidden;
 }
 
-.img-container:hover img {
-  transform: scale(1.1);
-  opacity: .75;
-}
-
 .latest-category {
   position: absolute;
   color: #fff;
@@ -875,6 +869,10 @@ button:focus {
   font-size: 1rem;
   line-height: 1.5rem;
   margin: 0 0 15px;
+}
+
+.latest-content h3:hover {
+  text-decoration: underline;
 }
 
 .latest-content p {
@@ -1470,6 +1468,11 @@ footer {
     background-repeat: no-repeat;
     background-position: 100%;
     background-size: auto 100%;
+  }
+  /*--- Sets the hover state for images in the latest section */
+  .img-container:hover img {
+    transform: scale(1.1);
+    opacity: .75;
   }
   .sign-up-input {
     flex: 1 1;
