--- a/scss/_latest.scss
+++ b/scss/_latest.scss
@@ -41,10 +41,6 @@
 .img-container {
     position: relative;
     overflow: hidden;
-    &:hover img {
-        transform: scale(1.1);
-        opacity: .75;
-    }
 }
 
 .latest-category {
@@ -81,6 +77,9 @@
         font-size: 1rem;
         line-height: 1.5rem;
         margin: 0 0 15px;
+        &:hover {
+            text-decoration: underline;
+        }
     }
     p {
         color: #666;
