--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -176,8 +176,8 @@
     display: none;
     position: absolute;
     top: 100%;
-    left: -20px;
-    right: -20px;
+    left: -15px;
+    right: -15px;
     z-index: 10;
     list-style: none;
     li {
