--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -32,8 +32,7 @@
     button {
         text-transform: uppercase;
         margin-top: auto;
-        margin-left: auto;
-        margin-right: auto;
+        align-self: center;
     }
 
 }
